--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 </head>
 <body>
+<h3 id="clock"></h3>
 	<div class="wrapper">
+
 		<header>
 			<h2 id="heading">Note Manager</h2>
 			<form id="search-note">
